# TutorBench

./: .env.example  .gitignore  IMPLEMENTATION.md  PLAN.md  PLANV3.md  README.md  pyproject.toml
maths/: base.py  rng.py
src/maths/: cli.py
src/tutorbench/: __init__.py  config.py  models.py
src/tutorbench/api/: app.py
src/tutorbench/eval/: gold.py  harness.py
src/tutorbench/eval/data/: README.md  grading_adversarial.json  grading_gold.json
src/tutorbench/generation/: __init__.py  cs.py
src/tutorbench/grading/: judge.py
src/tutorbench/llm/: __init__.py  client.py  telemetry.py
src/tutorbench/maths/: __init__.py  base.py  rng.py  util.py
src/tutorbench/maths/templates/: __init__.py  composite_functions.py  iteration.py  quadratics.py  vectors.py
src/tutorbench/spec/: __init__.py  loader.py
src/tutorbench/spec/data/: cs_ocr_j277.yaml  maths.yaml
src/tutorbench/verification/: calibrate.py  cs.py
templates/: __init__.py
tests/: conftest.py  test_integration_grade.py  test_llm_client.py  test_models.py  test_spec_loader.py  test_telemetry.py
tests/api/: test_generate.py  test_grade.py
tests/eval/: test_adversarial.py  test_gold.py  test_metrics.py
tests/generation/: test_cs.py
tests/grading/: test_judge.py
tests/maths/: test_templates.py  test_verification.py
tests/verification/: test_calibration.py  test_cs.py
