[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorbench"
version = "0.1.0"
description = "Local GCSE exam-prep question generator + auto-grader (no paid APIs)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "sympy>=1.12",
    "pyyaml>=6",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tutorbench-maths = "tutorbench.maths.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tutorbench = ["spec/data/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
