[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorbench"
version = "0.1.0"
description = "Local GCSE exam-prep question generator + auto-grader (no paid APIs)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "sympy>=1.12",
    "pyyaml>=6",
    "python-dotenv>=1",
    "ollama>=0.3",
    "instructor>=1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
tutorbench-maths = "tutorbench.maths.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tutorbench = ["spec/data/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: needs a live Ollama server/model"]
